Fix: inconsistent spacing between mobile previews

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -120,14 +120,27 @@ my-preview {
 .previews {
   display: flex;
   flex-wrap: wrap;
-  gap: 2%;
+  gap: 10px;
   padding: 0;
   margin: 0;
   margin-bottom: 7rem;
 }
 
+@media(width > 720px) {
+  .previews {
+    justify-content: space-between;
+    gap: 20px;
+  }
+}
+
 ul.previews {
   list-style: none;
+}
+
+.previews a,
+.previews li {
+  margin: 0;
+  padding: 0;
 }
 
 section.small.page {
